fixed autofocus and share buttons alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -31,7 +31,7 @@ section {
 .mat-card-container {
     display: flex;
     margin-right: 1rem;
-    margin-bottom: 3rem;
+    margin-bottom: 2rem;
     /* background-color: burlywood; */
 }
 
